2003-08-21  Han-Wen Nienhuys  <hanwen@cs.uu.nl>

	* lily/music.cc (var): add ly:music-transpose function.

	* Lily/parser.yy (pre_events): remove prefix articulations.

	* lily/music-sequence.cc (do_relative_octave): change relative meaning.

	* VERSION (MY_PATCH_LEVEL): open HEAD/1.9 branch.

	* Documentation/user/refman.itely (Text markup): add comment about
	markup in header.

2003-08-20  Han-Wen Nienhuys  <hanwen@cs.uu.nl>

	* lily/paper-outputter.cc (write_header_fields_to_file): 
	only dump value if it is a string.

	* flower/include/dictionary.hh: remove.
	
	* Documentation/ChangeLog-1.5: add back old log.

	* Documentation/topdocs/INSTALL.texi (Top): explain how to get
	.pfas from a .deb.

2003-08-19  Han-Wen Nienhuys  <hanwen@cs.uu.nl>

	* Documentation/bibliography/engraving.bib: add entry for
	Jaschinski's Notation

2003-08-18  Han-Wen Nienhuys  <hanwen@cs.uu.nl>

	* Documentation/user/refman.itely (Beaming): add note about
	allowBeamBreak

2003-08-18  Juergen Reuter  <reuter@ipd.uka.de>

	* lilypond.words, ly/engraver-init.ly, ly/params-init.ly: added
	GregorianTranscription contexts

	* ly/engraver-init.ly: vaticana contexts: minor fixes

	* Documentation/user/refman.itely (Ancient notation): added note
	on appendix length bug

	* input/puer-fragment.ly, input/test/gregorian-scripts.ly,
	input/test/vaticana.ly: use vaticana contexts; small fixes

2003-08-17  Jan Nieuwenhuizen  <janneke@gnu.org>

	* flower/hash.cc: Remove.

	* flower/include/dictionary.hh (V>): Compile fix: Remove assignment
	to (nonexistent?) hash_func_ identifier.

	* python/midi.c (midi_error, midi_warning): Use char const* for
	__FUNCTION__ argument.

	* python/gettext.py: Remove.  We already require python 2.1, which
	includes gettext.py.

	* configure.in: Require python 2.1, as INSTALL.texi says.
	it.

	* Documentation/topdocs/INSTALL.texi: Add note to avoid bison
	versions 1.50 and 1.75.  Remove note about lexer patch.

2003-08-16  Jan Nieuwenhuizen  <janneke@gnu.org>
