@@ -151,5 +151,5 @@ $(config_h): configure.in aclocal.m4
 # maybe move into private script?
 rsync-web:
 	cd out-www &&  mkdir web && tar  -xzf web.tar.gz -C web
-	cd out-www/web &&  rsync --delete --stats --progress -rltvu -e ssh . x:/var/www/lilypond/doc/v1.8/
+	cd out-www/web &&  rsync --delete --stats --progress -rltvu -e ssh . x:/var/www/lilypond/doc/v1.9/
 	cd out-www && rm -rf web/
