@@ -1,7 +1,6 @@
-
+#include "input.hh"
 #include "moment.hh"
 #include "pitch.hh"
-#include "simultaneous-music-iterator.hh"
 #include "music-list.hh"
 
 Moment
@@ -21,9 +20,44 @@ Simultaneous_music::Simultaneous_music()
 
 }
 
+/*
+  Cut & paste from Music_sequence, (ugh) , but we must add an error
+  message.
+ */
 Pitch
 Simultaneous_music::to_relative_octave (Pitch p)
 {
+  Pitch first;
+  int count=0;
+
+  Pitch last = p;
+  for (SCM s = music_list (); gh_pair_p (s);  s = ly_cdr (s))
+    {
+      if (Music *m = unsmob_music (ly_car (s)))
+	{
+	  last = m->to_relative_octave (last);
+	  if (!count ++)
+	    first = last;
+	}
+    }
+
+  if (count && first != last)
+    {
+      String str = _("Changing relative definition causes pitch change.");
+      str += "\nWas: " +  first.to_string ()
+	+ " -- now returning: " + last.to_string () + "\n";
+      
+      origin()->warning (str);
+    }
+
+  return last;
+}
+
+ADD_MUSIC (Simultaneous_music);
+
+Pitch
+Event_chord::to_relative_octave (Pitch p)
+{
   return do_relative_octave (p, true);
 }
-ADD_MUSIC (Simultaneous_music);
+ADD_MUSIC(Event_chord);
